--- a/theme/templates/page.html
+++ b/theme/templates/page.html
@@ -4,6 +4,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>{{ page.title }}</title>
     <link type="text/css" href="{{ SITE_URL }}/theme/css/main.css" rel="stylesheet">
+    <script>
+     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+     ga('create', 'UA-80447723-1', 'auto');
+     ga('send', 'pageview');
+    </script>
   </head>
   <body>
     <header>
