--- a/theme/templates/page.html
+++ b/theme/templates/page.html
@@ -3,7 +3,10 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>{{ page.title }}</title>
-    <link type="text/css" href="{{ SITE_URL }}/theme/css/main.css" rel="stylesheet">
+    <link type="text/css" href="{{ SITE_URL }}/theme/css/main-flex.css" rel="stylesheet">
+    <link type="text/css" href="{{ SITE_URL }}/theme/css/diagram.css" rel="stylesheet">
+    <script type="text/javascript" src="{{ SITE_URL }}/theme/js/base.js"></script>
+    {% if TARGET is equalto 'production' %} 
     <script>
      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -13,24 +16,51 @@
      ga('create', 'UA-80447723-1', 'auto');
      ga('send', 'pageview');
     </script>
+    {% endif %}
   </head>
   <body>
     <header>
-      <h1><a href="{{ SITE_URL }}/index.html">Diagram Editor UI Spikes</a></h1>
+      <h1><a href="{{ SITE_URL }}/index.html">UI Spikes</a></h1>
       <nav>
 	<ul>
 	  <li>
-	    Element traversal
+	    <a href="index.html">What is this?</a>
+	  </li>
+	  <li>
+	    <span>Element traversal</span>
 	    <ul>
 	      <li><a href="navigation-hierarchy.html">Hierarchical</a></li>
 	      <li><a href="navigation-jump.html">Jumping</a></li>
+	    </ul>
+	  </li>
+	  <li>
+	    <span>Element positioning</span>
+	    <ul>
+	      <li><a href="positioning-single-axis.html">Single axis</a></li>
 	    </ul>
 	  </li>
 	</ul>
       </nav>
     </header>
 
-    {{ page.content }}
-    
+    <div id="container">
+
+      {{ page.content }}
+
+      <div id="feedback">
+	<h2>Feedback wanted!</h2>
+	<p>
+	  I would really appreciate feedback on this UI spike.
+	  Would you like to use this in your daily work?
+	  Is something missing?
+	</p>
+	<p>
+	  Please feel free to
+	  <a href="https://github.com/MelleB/ui-spikes/issues/new">open an issue</a>.
+	  Thanks! <span class="heart">&#x2764;</span>
+	</p>
+      </div>
+    </div>
+
   </body>
 </html>
