(fix) Bug with including analythics code snippet

--- a/theme/templates/page.html
+++ b/theme/templates/page.html
@@ -6,7 +6,7 @@
     <link type="text/css" href="{{ SITE_URL }}/theme/css/main-flex.css" rel="stylesheet">
     <link type="text/css" href="{{ SITE_URL }}/theme/css/diagram.css" rel="stylesheet">
     <script type="text/javascript" src="{{ SITE_URL }}/theme/js/base.js"></script>
-    {% if TARGET is equalto 'production' %} 
+    {% if TARGET is equalto 'PRODUCTION' %} 
     <script>
      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
